fix page header on mobile

--- a/+/styles/admin/_settings.scss
+++ b/+/styles/admin/_settings.scss
@@ -12,6 +12,7 @@
     display: flex;
     flex-direction: column;
     margin-left: -20px;
+    position: relative;
 }
 .glsr-page-header {
     position: relative;
